# adapter-prompt

./: LICENSE  README.md  pyproject.toml
Adapter-Prompt/: playground.ipynb  regularizers.py  settings.py  utils.py
Adapter-Prompt/utils/: settings.py  utils.py
notebooks/: playground.ipynb
notebooks/.ipynb_checkpoints/: playground-checkpoint.ipynb
